deps/v8/test/message/fail/destructuring-non-function-non-iterable.out
*%(basename)s:6: TypeError: f is not a function or its return value is not iterable
var [a] = f();
          ^
TypeError: f is not a function or its return value is not iterable
    at *%(basename)s:6:11
